# rocheradar-v2

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  cleanrerun.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  railway.json  vercel.json
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.json  railway.worker-llm.json  railway.worker-pdf.json  railway.worker-scrape.json
backend/app/: auth.py  config.py  database.py  main.py  targets.json
backend/app/models/: __init__.py  agent_message.py  app_settings.py  discovery_result.py  extracted_insight.py  person_summary.py  run_log.py  scraped_post.py  search_history.py  social_post.py  target.py  user.py
backend/app/prompts/: agent.txt  extract.txt  summarize.txt
backend/app/routers/: agent.py  auth.py  discovery.py  reports.py  runs.py  settings.py  social.py  targets.py
backend/app/services/: apify_client.py  deduplicator.py  embedder.py  extractor.py  llm_router.py  pdf_generator.py  provider_health.py  run_context.py  scraper.py  synthesizer.py  tinyfish_social.py  vercel_blob_storage.py
backend/app/tasks/: celery_app.py  embed.py  llm.py  maintenance.py  pdf.py  scheduler.py  scrape.py  social.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_settings_providers.py  003_weekly_schedule.py  004_single_llm_model.py  005_remove_chroma.py  006_discovery_results.py  007_discovery_media.py  008_pgvector.py  009_social_posts.py  010_facebook_page_urls.py  011_target_social_handles.py  (+6 more)
backend/tests/: conftest.py  test_deduplicator.py
(+35 files in other folders)
